añadida validacion JS

--- a/WebContent/index.lecture04.html
+++ b/WebContent/index.lecture04.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Lecture04</h1>
-  <form onsubmit="return validarForma(this);" name="formulario1" method="post" action="Udemy_Servlets_JSPs/ManejoFormulariosHTML">
+  <form onsubmit="return validarForma(this);" name="formulario1" method="post" action="ManejoFormulariosHTML">
     <input type="hidden" name="oculto" value="valorOculto" />
     <table id="one-colum-empahsis" border="1">
       <caption>Formulario Registro de Datos</caption>
