minor css changes

--- a/WebContent/index.lecture04.html
+++ b/WebContent/index.lecture04.html
@@ -10,7 +10,7 @@
   <h1>Lecture04</h1>
   <form onsubmit="return validarForma(this);" name="formulario1" method="post" action="ManejoFormulariosHTML">
     <input type="hidden" name="oculto" value="valorOculto" />
-    <table id="one-colum-empahsis" border="1">
+    <table id="one-colum-emphasis">
       <caption>Formulario Registro de Datos</caption>
       <tr>
         <td class="oce-first">Usuario: (*)</td>
