--- a/WebContent/index.lecture05.html
+++ b/WebContent/index.lecture05.html
@@ -9,8 +9,8 @@
 	</head>
 
 	<body>
-		
-
+		<h1>Ejemplo de Cabeceros</h1>
+		<a href="/ManejoCabecero">Link al Servlet: ManejoCabecero</a>
 	</body>
 
 </html>
