--- a/WebContent/index.lecture05.html
+++ b/WebContent/index.lecture05.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<h1>Ejemplo de Cabeceros</h1>
-		<a href="/ManejoCabecero">Link al Servlet: ManejoCabecero</a>
+		<a href="ManejoCabeceros">Link al Servlet: ManejoCabecero</a>
 	</body>
 
 </html>
