--- a/WebContent/index.lecture10.html
+++ b/WebContent/index.lecture10.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<h1>Manejo de Cookies a traves de un Servlet</h1>
-	<a href="CookiesServlet">Enlace al Servlet</a>	
+	<a href="CookiesServlet">Enlace al Servlet: Manejo de Cookies</a>	
 </body>
 </html>
