--- a/WebContent/index.lecture11.html
+++ b/WebContent/index.lecture11.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<h1>Ejemplo de Sesiones</h1>
-	<a href="/HttpSession">Link al servlet: HTTP_SESSION</a>
+	<a href="HttpSession">Link al servlet: HTTP_SESSION</a>
 </body>
 </html>
