--- a/WebContent/lecture14.scripletsJSPs/index.html
+++ b/WebContent/lecture14.scripletsJSPs/index.html
@@ -10,6 +10,12 @@
 		<h1>Ejemplo de Scriptlets</h1>
 		<a href="scriplets.jsp">Ejemplos de Scriplets</a>
 
+		<!-- Formulario -->
+		<form action="fondoColor.jsp">
+			<input type="text" name="colorFondo">
+			<input type="submit" value="Enviar">
+		</form>
+
 	</body>
 
 </html>
